@@ -1,4 +1,4 @@
-<project name="jQuery plugins" basedir="../jquery">
+<project name="jQuery plugins" basedir="../jquery/jquery">
 
     <!--
       - Use this build to test compressed plugins and build distributions.
@@ -9,7 +9,7 @@
 
     <!-- SETUP -->
 
-    <property description="Source Folder" name="SRC_DIR" value="../plugins/" />
+    <property description="Source Folder" name="SRC_DIR" value="../../jquery-plugins/" />
     <property description="Files for parsing etc." name="BUILD_DIR" value="../jquery/build" />
     <property description="Rhino JS Engine" name="JAR" value="${BUILD_DIR}/js.jar" />
     <property name="prefix" value="/jquery." />
@@ -102,10 +102,22 @@
             <param name="name" value="format" />
         </antcall>
     </target>
+	
+	<target name="prettydate" description="Build format plugin.">
+        <antcall target="generic">
+            <param name="name" value="prettydate" />
+        </antcall>
+    </target>
 
     <target name="validate" description="Build validate plugin.">
         <antcall target="generic">
             <param name="name" value="validate" />
+        </antcall>
+    </target>
+	
+	<target name="validate.password" description="Build validate.password plugin.">
+        <antcall target="generic">
+            <param name="name" value="validate.password" />
         </antcall>
     </target>
 	
